# snake-bevy

./: Cargo.toml  index.html  package.json  snake_bevy.d.ts  snake_bevy.js  snake_bevy_bg.wasm.d.ts
src/: lib.rs  main.rs
